pghoard 2.1.0 (unreleased)
==========================

* Support for passing statistics to Prometheus
* Progress monitoring of basebackups
* Fix incompatibility with legacy PGHoard backups (2.0.0 was unable to
  restore backups taken with much older versions)
* Compatibility improvements for different S3 api implementations

pghoard 2.0.0 (2018-11-08)
==========================

* Support for PostgreSQL 11
* Drop support for PosgreSQL 9.2
* Multiprocess parallel basebackup restore
* Performance improvements
* Bug fixes
* Python 3.7 compatibility

pghoard 1.7.0 (2018-02-09)
==========================

* Support for PostgreSQL 10.1+
* Use fast checkpoints by default to make the start of backups faster.  Slow
  progress at the beginning of the backup has a tendency to confuse people.
* Allow overriding the name of the folder for a site's backups by using a
  new site-level configuration option ``prefix``.  Previously backups were
  always stored in a folder named after the site, optionally prefixed by an
  undocumented top-level configuration option ``path_prefix`` which is now
  deprecated.
* ``archive_cleanup`` storage errors are no longer fatal (just logged as
  errors now).  Total WAL segment storage size savings is reported after
  cleanup.  There is a 'dry run' mode available now to estimate cleanup
  effect before deleting actual items.
* Use botocore rather than boto for interfacing with S3. Botocore is the
  underlying and maintained library under the newer boto3 SDK.
* Add a new --tablespace-base-dir option to restore so you can put all
  the tablespaces under a single directory hierarchy.
* Miscellaneous bug fixes and improvements

pghoard 1.6.0 (2017-10-12)
==========================

* Support for PostgreSQL 10
* ``local-tar`` backups are now split to roughly 2 gigabyte chunks of
  plain-text files.  New basebackups now benefit from some parallelization,
  as up to 5 chunks may be uploaded in parallel while new backup chunks are
  being created.